fix: adjust z-index values and background opacity for search overlay

--- a/app/src/app/components/navbar/navbar.scss
+++ b/app/src/app/components/navbar/navbar.scss
@@ -6,7 +6,7 @@
   &.search-expanded {
     position: fixed;
     width: 80%;
-    z-index: 10;
+    // z-index: 2;
   }
 }
 
@@ -22,15 +22,16 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: rgba(0, 0, 0, 0.6);
+  background: rgba(0, 0, 0, 0.7);
   opacity: 0;
   visibility: hidden;
   transition: all 0.3s ease;
+  user-select: none;
 
   &.active {
     opacity: 1;
     visibility: visible;
     overflow: hidden;
-    z-index: 10;
+    z-index: 5;
   }
 }
